# gpthub

./: .env.example  .env.openwebui  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  Taskfile.yml  config_docker.json  config_fastapi.json  docker-compose.yml  manage.py  pyproject.toml
docs/: features.md  index.html  openapi.yml
gpthub/: __init__.py  api_v1.py  baseclasses.py  clients.py  constants.py  controls.py  exceptions.py  middlewares.py  models.py  mongodb.py  prompts.py  rest.py  rpc.py  structures.py  tools.py  utils.py
gpthub/actors/: __init__.py  memorize.py
tests/: conftest.py  constants.py  fixtures.py  mocks.py  test_api_v1.py  test_api_v1_audio.py  test_api_v1_chat.py  test_api_v1_files.py  test_api_v1_health.py  test_api_v1_models.py  test_controls.py  test_router.py  test_structures.py  test_utils.py
tests/api/: responses.py
tests/reducers/: __init__.py  chat.py  memory.py
