[project]
name = "gpthub"
version = "0.1.0"
description = "GPTHub — unified AI workspace. OpenAI-compatible backend over any LLM provider: chat, voice, vision, RAG, agentic tools, long-term memory."
authors = [{ name = "Alexander Yurlov" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["llm", "ai", "rag", "openai-compatible", "multimodal", "agent", "function-calling", "fastapi"]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi ~= 0.115.0",
    "uvicorn ~= 0.34.0",
    "redis ~= 5.0",
    "httpx ~= 0.28.0",
    "pydantic ~= 2.0",
    "python-multipart >=0.0.18,<0.0.19",
    "beautifulsoup4 ~= 4.12",
    "pypdf ~= 5.0",
    "python-docx ~= 1.1",
    "duckduckgo-search ~= 7.0",
    "typer ~= 0.12.0",
    "aiohttp ~= 3.11",
    "aiohttp-socks ~= 0.10.0",
    "toml ~= 0.10.0",
    "motor ~= 3.3",
    "pymongo ~= 4.8",
    "config-fastapi ~= 1.1",
    "fastabc ~= 4.6",
    "fastapiabclib ~= 4.3",
    "frpclnt ~= 0.5.0",
    "commandlinestart ~= 0.2.3",
    "aiomotorengine ~= 1.0",
    "red-mng ~= 1.1",
    "aiorediscache ~= 4.1",
    "redis-distlock ~= 1.0",
    "aiowebparser ~= 1.1",
    "fpiaioact ~= 2.0",
    "redis-rpc-pubsub ~= 1.0",
    "python-pptx ~= 1.0",
    "aioboto3 ~= 15.5",
]

[project.urls]
repository = "https://github.com/AlexYrlv/gpthub"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "gpthub" }]

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[tool.poetry.group.linter.dependencies]
ruff = "^0.8"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pyhamcrest = "^2.1"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
